[project]
name = "msd-datasets"
version = "0.1.0"
description = "MSD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]
